test_regress/t/t_case_genx_bad.out
%Error: t/t_case_genx_bad.v:14:9: Use of x/? constant in generate case statement, (no such thing as 'generate casez')
                                : ... note: In instance 't'
   14 |         32'b1xxx: initial begin end
      |         ^~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
